src/gen/PythonSParser.py
# Generated from /home/Aluno/Downloads/trabalhoFinalCompiladores/PythonS.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonSParser ( Parser ):

    grammarFileName = "PythonS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'int'", "'real'", "'string'", 
                     "'boolean'", "'void'", "','", "'='", "'def'", "'('", 
                     "')'", "'{'", "'}'", "'main'", "'break'", "'for'", 
                     "'in'", "'range'", "'do'", "'while'", "'if'", "'else'", 
                     "':'", "'input'", "'print'", "'!'", "'-'", "'&&'", 
                     "'||'", "'+'", "'*'", "'/'", "'=='", "'!='", "'>='", 
                     "'<='", "'>'", "'<'", "'+='", "'*='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "NUM", "STRING", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_decVars = 1
    RULE_type = 2
    RULE_listaIds = 3
    RULE_listaAtribs = 4
    RULE_decFunc = 5
    RULE_blocoMain = 6
    RULE_stmt = 7
    RULE_breakStmt = 8
    RULE_atrib = 9
    RULE_for = 10
    RULE_doWhile = 11
    RULE_if = 12
    RULE_expr = 13
    RULE_term = 14
    RULE_factor = 15
    RULE_range = 16
    RULE_listaParams = 17
    RULE_nativeFunc = 18
    RULE_print = 19
    RULE_operacao = 20

    ruleNames =  [ "prog", "decVars", "type", "listaIds", "listaAtribs", 
                   "decFunc", "blocoMain", "stmt", "breakStmt", "atrib", 
                   "for", "doWhile", "if", "expr", "term", "factor", "range", 
                   "listaParams", "nativeFunc", "print", "operacao" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    ID=41
    NUM=42
    STRING=43
    WS=44
    COMMENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blocoMain(self):
            return self.getTypedRuleContext(PythonSParser.BlocoMainContext,0)


        def decVars(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSParser.DecVarsContext)
            else:
                return self.getTypedRuleContext(PythonSParser.DecVarsContext,i)


        def decFunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSParser.DecFuncContext)
            else:
                return self.getTypedRuleContext(PythonSParser.DecFuncContext,i)


        def getRuleIndex(self):
            return PythonSParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PythonSParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonSParser.T__1) | (1 << PythonSParser.T__2) | (1 << PythonSParser.T__3) | (1 << PythonSParser.T__4) | (1 << PythonSParser.T__5))) != 0):
                self.state = 42
                self.decVars()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 48
                    self.decFunc() 
                self.state = 53
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 54
            self.blocoMain()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(PythonSParser.TypeContext,0)


        def listaIds(self):
            return self.getTypedRuleContext(PythonSParser.ListaIdsContext,0)


        def listaAtribs(self):
            return self.getTypedRuleContext(PythonSParser.ListaAtribsContext,0)


        def getRuleIndex(self):
            return PythonSParser.RULE_decVars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecVars" ):
                listener.enterDecVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecVars" ):
                listener.exitDecVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecVars" ):
                return visitor.visitDecVars(self)
            else:
                return visitor.visitChildren(self)




    def decVars(self):

        localctx = PythonSParser.DecVarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decVars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.type_()
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 57
                self.listaIds()
                pass

            elif la_ == 2:
                self.state = 58
                self.listaAtribs()
                pass


            self.state = 61
            self.match(PythonSParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonSParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = PythonSParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonSParser.T__1) | (1 << PythonSParser.T__2) | (1 << PythonSParser.T__3) | (1 << PythonSParser.T__4) | (1 << PythonSParser.T__5))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaIdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSParser.ID)
            else:
                return self.getToken(PythonSParser.ID, i)

        def getRuleIndex(self):
            return PythonSParser.RULE_listaIds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaIds" ):
                listener.enterListaIds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaIds" ):
                listener.exitListaIds(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaIds" ):
                return visitor.visitListaIds(self)
            else:
                return visitor.visitChildren(self)




    def listaIds(self):

        localctx = PythonSParser.ListaIdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listaIds)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(PythonSParser.ID)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PythonSParser.T__6:
                self.state = 66
                self.match(PythonSParser.T__6)
                self.state = 67
                self.match(PythonSParser.ID)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaAtribsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSParser.ID)
            else:
                return self.getToken(PythonSParser.ID, i)

        def NUM(self):
            return self.getToken(PythonSParser.NUM, 0)

        def STRING(self):
            return self.getToken(PythonSParser.STRING, 0)

        def getRuleIndex(self):
            return PythonSParser.RULE_listaAtribs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaAtribs" ):
                listener.enterListaAtribs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaAtribs" ):
                listener.exitListaAtribs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaAtribs" ):
                return visitor.visitListaAtribs(self)
            else:
                return visitor.visitChildren(self)




    def listaAtribs(self):

        localctx = PythonSParser.ListaAtribsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_listaAtribs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(PythonSParser.ID)
            self.state = 74
            self.match(PythonSParser.T__7)
            self.state = 75
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonSParser.ID) | (1 << PythonSParser.NUM) | (1 << PythonSParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSParser.ID)
            else:
                return self.getToken(PythonSParser.ID, i)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSParser.TypeContext)
            else:
                return self.getTypedRuleContext(PythonSParser.TypeContext,i)


        def listaParams(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSParser.ListaParamsContext)
            else:
                return self.getTypedRuleContext(PythonSParser.ListaParamsContext,i)


        def decVars(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSParser.DecVarsContext)
            else:
                return self.getTypedRuleContext(PythonSParser.DecVarsContext,i)


        def decFunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSParser.DecFuncContext)
            else:
                return self.getTypedRuleContext(PythonSParser.DecFuncContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonSParser.StmtContext,i)


        def getRuleIndex(self):
            return PythonSParser.RULE_decFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecFunc" ):
                listener.enterDecFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecFunc" ):
                listener.exitDecFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecFunc" ):
                return visitor.visitDecFunc(self)
            else:
                return visitor.visitChildren(self)




    def decFunc(self):

        localctx = PythonSParser.DecFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_decFunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 77
                    self.match(PythonSParser.T__8)
                    self.state = 78
                    self.match(PythonSParser.ID)
                    self.state = 79
                    self.match(PythonSParser.T__9)
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonSParser.T__1) | (1 << PythonSParser.T__2) | (1 << PythonSParser.T__3) | (1 << PythonSParser.T__4) | (1 << PythonSParser.T__5))) != 0):
                        self.state = 80
                        self.listaParams()
                        self.state = 85
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 86
                    self.match(PythonSParser.T__10)
                    self.state = 87
                    self.type_()
                    self.state = 88
                    self.match(PythonSParser.T__11)
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonSParser.T__1) | (1 << PythonSParser.T__2) | (1 << PythonSParser.T__3) | (1 << PythonSParser.T__4) | (1 << PythonSParser.T__5))) != 0):
                        self.state = 89
                        self.decVars()
                        self.state = 94
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==PythonSParser.T__8:
                        self.state = 95
                        self.decFunc()
                        self.state = 100
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 102 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 101
                        self.stmt()
                        self.state = 104 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonSParser.T__15) | (1 << PythonSParser.T__18) | (1 << PythonSParser.T__20) | (1 << PythonSParser.T__24) | (1 << PythonSParser.ID))) != 0)):
                            break

                    self.state = 106
                    self.match(PythonSParser.T__12)

                else:
                    raise NoViableAltException(self)
                self.state = 110 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoMainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonSParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonSParser.StmtContext,i)


        def getRuleIndex(self):
            return PythonSParser.RULE_blocoMain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocoMain" ):
                listener.enterBlocoMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocoMain" ):
                listener.exitBlocoMain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlocoMain" ):
                return visitor.visitBlocoMain(self)
            else:
                return visitor.visitChildren(self)




    def blocoMain(self):

        localctx = PythonSParser.BlocoMainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blocoMain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(PythonSParser.T__8)
            self.state = 113
            self.match(PythonSParser.T__13)
            self.state = 114
            self.match(PythonSParser.T__9)
            self.state = 115
            self.match(PythonSParser.T__10)
            self.state = 116
            self.match(PythonSParser.T__11)
            self.state = 118 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 117
                self.stmt()
                self.state = 120 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PythonSParser.T__15) | (1 << PythonSParser.T__18) | (1 << PythonSParser.T__20) | (1 << PythonSParser.T__24) | (1 << PythonSParser.ID))) != 0)):
                    break

            self.state = 122
            self.match(PythonSParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def for_(self):
            return self.getTypedRuleContext(PythonSParser.ForContext,0)


        def doWhile(self):
            return self.getTypedRuleContext(PythonSParser.DoWhileContext,0)


        def if_(self):
            return self.getTypedRuleContext(PythonSParser.IfContext,0)


        def atrib(self):
            return self.getTypedRuleContext(PythonSParser.AtribContext,0)


        def nativeFunc(self):
            return self.getTypedRuleContext(PythonSParser.NativeFuncContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonSParser.ID)
            else:
                return self.getToken(PythonSParser.ID, i)

        def operacao(self):
            return self.getTypedRuleContext(PythonSParser.OperacaoContext,0)


        def expr(self):
            return self.getTypedRuleContext(PythonSParser.ExprContext,0)


        def NUM(self):
            return self.getToken(PythonSParser.NUM, 0)

        def getRuleIndex(self):
            return PythonSParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PythonSParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.for_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.doWhile()
                self.state = 126
                self.match(PythonSParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.if_()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.atrib()
                self.state = 130
                self.match(PythonSParser.T__0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.nativeFunc()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 133
                self.match(PythonSParser.ID)
                self.state = 134
                self.match(PythonSParser.ID)
                self.state = 135
                self.operacao()
                self.state = 136
                self.match(PythonSParser.ID)
                self.state = 137
                self.match(PythonSParser.T__9)
                self.state = 138
                self.expr(0)
                self.state = 139
                self.match(PythonSParser.T__10)
                self.state = 140
                self.match(PythonSParser.T__0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 142
                self.match(PythonSParser.ID)
                self.state = 143
                _la = self._input.LA(1)
                if not(_la==PythonSParser.ID or _la==PythonSParser.NUM):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 144
                self.match(PythonSParser.T__0)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 145
                self.match(PythonSParser.ID)
                self.state = 146
                self.match(PythonSParser.T__9)
                self.state = 147
                self.match(PythonSParser.ID)
                self.state = 148
                self.expr(0)
                self.state = 149
                self.match(PythonSParser.T__10)
                self.state = 150
                self.match(PythonSParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(PythonSParser.StmtContext,0)


        def getRuleIndex(self):
            return PythonSParser.RULE_breakStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStmt" ):
                listener.enterBreakStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStmt" ):
                listener.exitBreakStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStmt" ):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)




    def breakStmt(self):

        localctx = PythonSParser.BreakStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_breakStmt)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PythonSParser.T__15, PythonSParser.T__18, PythonSParser.T__20, PythonSParser.T__24, PythonSParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.stmt()
                pass
            elif token in [PythonSParser.T__14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(PythonSParser.T__14)
                self.state = 156
                self.match(PythonSParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonSParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonSParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonSParser.RULE_atrib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtrib" ):
                listener.enterAtrib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtrib" ):
                listener.exitAtrib(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtrib" ):
                return visitor.visitAtrib(self)
            else:
                return visitor.visitChildren(self)




    def atrib(self):

        localctx = PythonSParser.AtribContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_atrib)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(PythonSParser.ID)
            self.state = 160
            self.match(PythonSParser.T__7)
            self.state = 161
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonSParser.ID, 0)

        def range_(self):
            return self.getTypedRuleContext(PythonSParser.RangeContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(PythonSParser.BreakStmtContext,0)


        def getRuleIndex(self):
            return PythonSParser.RULE_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)




    def for_(self):

        localctx = PythonSParser.ForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_for)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(PythonSParser.T__15)
            self.state = 164
            self.match(PythonSParser.ID)
            self.state = 165
            self.match(PythonSParser.T__16)
            self.state = 166
            self.match(PythonSParser.T__17)
            self.state = 167
            self.match(PythonSParser.T__9)
            self.state = 168
            self.range_()
            self.state = 169
            self.match(PythonSParser.T__10)
            self.state = 170
            self.match(PythonSParser.T__11)
            self.state = 171
            self.breakStmt()
            self.state = 172
            self.match(PythonSParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def breakStmt(self):
            return self.getTypedRuleContext(PythonSParser.BreakStmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(PythonSParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonSParser.RULE_doWhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhile" ):
                listener.enterDoWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhile" ):
                listener.exitDoWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhile" ):
                return visitor.visitDoWhile(self)
            else:
                return visitor.visitChildren(self)




    def doWhile(self):

        localctx = PythonSParser.DoWhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_doWhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(PythonSParser.T__18)
            self.state = 175
            self.match(PythonSParser.T__11)
            self.state = 176
            self.breakStmt()
            self.state = 177
            self.match(PythonSParser.T__12)
            self.state = 178
            self.match(PythonSParser.T__19)
            self.state = 179
            self.match(PythonSParser.T__9)
            self.state = 180
            self.expr(0)
            self.state = 181
            self.match(PythonSParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'
